fix(gateway): normalize malformed Content-Type headers with comma separator in upstream responses